Responsive Design Bugs
Fixed title on hover is too big; when content doesn't fit in DOCS, it drops down; DOCS line gap;  Dark mode cover up the content underneath

--- a/css/header.css
+++ b/css/header.css
@@ -3,10 +3,10 @@
 }
 
 .header {
-    height: 50px;
+    min-height: 50px;
     background-color: var(--dark);
     padding: 10px 10px;
-    margin-bottom: 3rem;
+    overflow:none; 
 }
 
 .header a {
@@ -39,6 +39,7 @@
 
 .header-right {
     float: right;
+    
 }
 
 .header-right>* {
@@ -48,4 +49,8 @@
 .darkmode .text {
     font-family: Arial, Helvetica, sans-serif;
     line-height: 35px;
+}
+
+.gear-is-open{
+    margin-bottom: 50px;
 }
