--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,7 @@
 @import "fa.css";
 @import "header.css";
 @import "responsive.css";
+@import "homepage-conent.css";
 :root {
     --light: #fff;
     --dark: #333;
@@ -12,6 +13,8 @@ body {
     padding: 0;
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
+    overflow-y: visible;
+    overflow-x: hidden;
 }
 
 .github>a {
